test/tools/javac/annotations/annotationsInComments/Test07.out
Test07.java:11:2: compiler.err.cant.resolve: kindname.class, Unknown, , 
1 error